--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -30,14 +30,14 @@ dock_5="Inspector,Node,History"
 open_scenes=PackedStringArray("res://scenes/world.tscn", "res://scenes/world_2.tscn", "res://scenes/world_3.tscn", "res://scenes/player.tscn")
 center_split_offset=0
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=1
-current_scene="res://scenes/world.tscn"
+selected_main_editor_idx=2
+current_scene="res://scenes/world_2.tscn"
 selected_bottom_panel_item=0
 
 [ScriptEditor]
 
 open_scripts=["res://scripts/camera_rig.gd", "res://scripts/location_label.gd", "res://scripts/player.gd", "res://scripts/portal.gd", "res://scripts/stage.gd", "res://scripts/stage_manager.gd"]
-selected_script="res://scripts/stage.gd"
+selected_script="res://scripts/stage_manager.gd"
 open_help=[]
 script_split_offset=70
 list_split_offset=0
