--- a/.godot/editor/project_metadata.cfg
+++ b/.godot/editor/project_metadata.cfg
@@ -1,6 +1,6 @@
 [editor_metadata]
 
-executable_path="C:/Portable Software/Godot/Godot_v4.1.1-stable_win64.exe"
+executable_path="C:/Program Files (x86)/Steam/steamapps/common/Godot Engine/godot.windows.opt.tools.64.exe"
 use_advanced_connections=false
 
 [debug_options]
@@ -29,7 +29,7 @@ Control:scale=true
 [dialog_bounds]
 
 create_new_node=Rect2(2430, 190, 900, 700)
-project_settings=Rect2(2430, 190, 900, 700)
+project_settings=Rect2(2757, 144, 900, 700)
 
 [color_picker]
 
